fixed some styling on mobile and tablet versions

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,7 +258,7 @@ figcaption {
 }
 
 .projects-header {
-  text-align: center;
+  text-align: start;
 }
 
 .edition-and-forecast {
@@ -543,7 +543,7 @@ figcaption {
     align-items: center;
     grid-column-start: 1;
     grid-column-end: 9;
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
   }
 
   .jobs section:last-child .job-description,
@@ -611,7 +611,7 @@ figcaption {
     align-items: center;
     grid-column-start: 1;
     grid-column-end: 9;
-    grid-row: 3 / 6;
+    grid-row: 2 / 6;
     gap: 0.75rem;
   }
 
@@ -634,22 +634,29 @@ figcaption {
   .contact-header {
     /* width: 75%; */
     text-align: start;
+    max-width: 500px;
   }
   .contact-form {
     display: flex;
     width: 100%;
     flex-direction: column;
     align-items: center;
-    grid-column-start: 9;
-    grid-column-end: 17;
-    grid-row: 4 / 9;
+    grid-column-start: 4;
+    grid-column-end: 14;
+    grid-row: 6 / 9;
     gap: 0.5rem;
     justify-self: center;
   }
 
   form {
     width: 100%;
+    max-width: 500px;
     height: 61%;
+  }
+
+  input {
+    height: 5.75em;
+    font-size: 0.86rem;
   }
 }
 
@@ -951,6 +958,10 @@ figcaption {
     -webkit-hyphens: auto;
     hyphens: auto;
     white-space-collapse: preserve;
+  }
+
+  article:nth-of-type(2) section p {
+    white-space-collapse: unset;
   }
 
   .professional-statement section p {
